<resources>
    <string name="app_name">Qingdan</string>
    <string name="noMoreData">没有更多数据了哦~</string>
    <string name="lookup_goods">查看商品</string>
    <string name="like_count">喜欢(%1$d)</string>
    <string name="comments_count">评论(%1$d)</string>
    <string name="text_input_search_things">输入关键字筛选商品</string>
    <string name="cancel">取消</string>
    <string name="review_count">热门</string>
    <string name="rating_score">评分</string>
    <string name="brand_name">名称</string>
    <string name="review">点评</string>
    <string name="score_and_review">%1$s分（%2$d人点评）</string>
</resources>
